sandbox/new-c-api/tinyusdz_c.h

/* ============================================================================
 * Core Types and Enums
 * ============================================================================ */

/**
 * @brief Opaque handle types
 */
typedef struct tusdz_stage_impl* tusdz_stage;
typedef struct tusdz_prim_impl* tusdz_prim;
typedef struct tusdz_value_impl* tusdz_value;
/**
 * @brief Result codes for API functions
 */
typedef enum {
    TUSDZ_SUCCESS = 0,
    TUSDZ_ERROR_FILE_NOT_FOUND = -1,
    TUSDZ_ERROR_PARSE_FAILED = -2,
    TUSDZ_ERROR_OUT_OF_MEMORY = -3,
    TUSDZ_ERROR_INVALID_ARGUMENT = -4,
    TUSDZ_ERROR_NOT_SUPPORTED = -5,
    TUSDZ_ERROR_COMPOSITION_FAILED = -6,
    TUSDZ_ERROR_INVALID_FORMAT = -7,
    TUSDZ_ERROR_IO_ERROR = -8,
    TUSDZ_ERROR_INTERNAL = -99
} tusdz_result;
/**
 * @brief USD file formats
 */
typedef enum {
    TUSDZ_FORMAT_AUTO = 0,  /**< Auto-detect format from file extension or content */
    TUSDZ_FORMAT_USDA,      /**< ASCII text format (.usda) */
    TUSDZ_FORMAT_USDC,      /**< Binary Crate format (.usdc) */
    TUSDZ_FORMAT_USDZ       /**< Zip archive format (.usdz) */
} tusdz_format;
/**
 * @brief Load options for USD files
 */
typedef struct {
    /** Maximum memory limit in MB (0 = no limit) */
    size_t max_memory_limit_mb;

    /** Maximum composition depth (0 = use default) */
    int max_depth;

    /** Enable composition (resolve references, payloads) */
    int enable_composition;

    /** Strict mode - fail on any warnings */
    int strict_mode;

    /** Load only structure, skip heavy data */
    int structure_only;

    /** Custom asset resolver callback (can be NULL) */
    const char* (*asset_resolver)(const char* asset_path, void* user_data);
    void* asset_resolver_data;
} tusdz_load_options;
/* ============================================================================
 * Tier 1: Core API Functions (Essential)
 * ============================================================================ */

/**
 * @brief Initialize the TinyUSDZ library
 * @return TUSDZ_SUCCESS on success
 */
TUSDZ_API tusdz_result tusdz_init(void);
/**
 * @brief Shutdown the TinyUSDZ library and free global resources
 */
TUSDZ_API void tusdz_shutdown(void);
/**
 * @brief Get version string
 * @return Version string like "1.0.0"
 */
TUSDZ_API const char* tusdz_get_version(void);
/**
 * @brief Load USD from file
 * @param filepath Path to USD file
 * @param options Load options (can be NULL for defaults)
 * @param out_stage Output stage handle
 * @param error_buf Buffer for error message (can be NULL)
 * @param error_buf_size Size of error buffer
 * @return Result code
 */
TUSDZ_API tusdz_result tusdz_load_from_file(
    const char* filepath,
    const tusdz_load_options* options,
    tusdz_stage* out_stage,
    char* error_buf,
    size_t error_buf_size
);
/**
 * @brief Load USD from memory buffer
 * @param data Memory buffer containing USD data
 * @param size Size of buffer in bytes
 * @param format Format of the data (use TUSDZ_FORMAT_AUTO to detect)
 * @param options Load options (can be NULL for defaults)
 * @param out_stage Output stage handle
 * @param error_buf Buffer for error message (can be NULL)
 * @param error_buf_size Size of error buffer
 * @return Result code
 */
TUSDZ_API tusdz_result tusdz_load_from_memory(
    const void* data,
    size_t size,
    tusdz_format format,
    const tusdz_load_options* options,
    tusdz_stage* out_stage,
    char* error_buf,
    size_t error_buf_size
);
/**
 * @brief Free a stage and all associated resources
 * @param stage Stage to free
 */
TUSDZ_API void tusdz_stage_free(tusdz_stage stage);
/**
 * @brief Get the root prim of the stage
 * @param stage Stage handle
 * @return Root prim (borrowed reference, do not free)
 */
TUSDZ_API tusdz_prim tusdz_stage_get_root_prim(tusdz_stage stage);
/**
 * @brief Get prim at specific path
 * @param stage Stage handle
 * @param path Prim path (e.g., "/World/Geo/Mesh")
 * @return Prim handle or NULL if not found
 */
TUSDZ_API tusdz_prim tusdz_stage_get_prim_at_path(tusdz_stage stage, const char* path);
/* String extraction */
TUSDZ_API tusdz_result tusdz_value_get_string(tusdz_value value, const char** out);
TUSDZ_API tusdz_result tusdz_value_get_float3(tusdz_value value, float* out_xyz);
/* ============================================================================
 * Animation and Time Sampling API
 * ============================================================================ */

/**
 * @brief Check if stage has animation
 * @param stage Stage handle
 * @return 1 if animated, 0 otherwise
 */
TUSDZ_API int tusdz_stage_has_animation(tusdz_stage stage);
/**
 * @brief Get time code range for stage
 * @param stage Stage handle
 * @param out_start_time Start time
 * @param out_end_time End time
 * @param out_fps Frames per second
 * @return Result code
 */
TUSDZ_API tusdz_result tusdz_stage_get_time_range(
    tusdz_stage stage,
    double* out_start_time,
    double* out_end_time,
    double* out_fps
);
/**
 * @brief Detect USD format from file extension
 * @param filepath File path
 * @return Detected format
 */
TUSDZ_API tusdz_format tusdz_detect_format(const char* filepath);