sandbox/new-c-api/tinyusdz.py


    def get_string(self) -> Optional[str]:
        """Get as string"""
        value = ctypes.c_char_p()
        _lib.tusdz_value_get_string.restype = ctypes.c_int
        _lib.tusdz_value_get_string.argtypes = [ctypes.c_void_p, ctypes.POINTER(ctypes.c_char_p)]
        if _lib.tusdz_value_get_string(self._handle, ctypes.byref(value)) == Result.SUCCESS:
            return value.value.decode('utf-8') if value.value else None
        return None

    def get_float3(self) -> Optional[Tuple[float, float, float]]:
        """Get as float3"""
        values = (ctypes.c_float * 3)()
        _lib.tusdz_value_get_float3.restype = ctypes.c_int
        _lib.tusdz_value_get_float3.argtypes = [ctypes.c_void_p, ctypes.POINTER(ctypes.c_float)]
        if _lib.tusdz_value_get_float3(self._handle, values) == Result.SUCCESS:
            return tuple(float(v) for v in values)
        return None

    def __repr__(self) -> str:
        return f"ValueWrapper(type='{self.type_name}')"


class StageWrapper:
    """Wrapper for USD Stage"""

    def __init__(self, stage_handle):
        self._handle = stage_handle

    @property
    def root_prim(self) -> PrimWrapper:
        """Get root prim"""
        _lib.tusdz_stage_get_root_prim.restype = ctypes.c_void_p
        _lib.tusdz_stage_get_root_prim.argtypes = [ctypes.c_void_p]
        root = _lib.tusdz_stage_get_root_prim(self._handle)
        return PrimWrapper(root) if root else None

    def get_prim_at_path(self, path: str) -> Optional[PrimWrapper]:
        """Get prim at path"""
        _lib.tusdz_stage_get_prim_at_path.restype = ctypes.c_void_p
        _lib.tusdz_stage_get_prim_at_path.argtypes = [ctypes.c_void_p, ctypes.c_char_p]
        prim = _lib.tusdz_stage_get_prim_at_path(self._handle, path.encode('utf-8'))
        return PrimWrapper(prim) if prim else None

    @property
    def has_animation(self) -> bool:
        """Check if stage has animation"""
        _lib.tusdz_stage_has_animation.restype = ctypes.c_int
        _lib.tusdz_stage_has_animation.argtypes = [ctypes.c_void_p]
        return bool(_lib.tusdz_stage_has_animation(self._handle))

    def get_time_range(self) -> Optional[Tuple[float, float, float]]:
        """Get time range (start, end, fps)"""
        start = ctypes.c_double()
        end = ctypes.c_double()
        fps = ctypes.c_double()
        _lib.tusdz_stage_get_time_range.restype = ctypes.c_int
        _lib.tusdz_stage_get_time_range.argtypes = [
            ctypes.c_void_p,
            ctypes.POINTER(ctypes.c_double),
            ctypes.POINTER(ctypes.c_double),
            ctypes.POINTER(ctypes.c_double),
        ]
        if _lib.tusdz_stage_get_time_range(
            self._handle, ctypes.byref(start), ctypes.byref(end), ctypes.byref(fps)
        ) == Result.SUCCESS:
            return (float(start.value), float(end.value), float(fps.value))
        return None

    def __del__(self):
        """Clean up stage"""
        if self._handle:
            _lib.tusdz_stage_free(self._handle)

    def __repr__(self) -> str:
        root = self.root_prim
        return f"StageWrapper(root='{root.name if root else 'None'}')"


# ============================================================================
# Global API Functions
# ============================================================================

def init() -> bool:
    """Initialize TinyUSDZ library"""
    _lib.tusdz_init.restype = ctypes.c_int
    return _lib.tusdz_init() == Result.SUCCESS


def shutdown():
    """Shutdown TinyUSDZ library"""
    _lib.tusdz_shutdown.argtypes = []
    _lib.tusdz_shutdown()


def get_version() -> str:
    """Get TinyUSDZ version"""
    _lib.tusdz_get_version.restype = ctypes.c_char_p
    version = _lib.tusdz_get_version()
    return version.decode('utf-8') if version else "unknown"


def load_from_file(
    filepath: str,
    options: Optional[LoadOptions] = None,
    capture_error: bool = True,
) -> Optional[StageWrapper]:
    """Load USD from file"""
    error_buf = ctypes.create_string_buffer(1024)
    stage = ctypes.c_void_p()

    _lib.tusdz_load_from_file.restype = ctypes.c_int
    _lib.tusdz_load_from_file.argtypes = [
        ctypes.c_char_p,
        ctypes.POINTER(LoadOptions),
        ctypes.POINTER(ctypes.c_void_p),
        ctypes.c_char_p,
        ctypes.c_size_t,
    ]

    result = _lib.tusdz_load_from_file(
        filepath.encode('utf-8'),
        ctypes.byref(options) if options else None,
        ctypes.byref(stage),
        error_buf,
        len(error_buf),
    )

    if result != Result.SUCCESS:
        error_msg = error_buf.value.decode('utf-8') if error_buf.value else "Unknown error"
        if capture_error:
            raise RuntimeError(f"Failed to load USD: {error_msg} (code: {result})")
        return None

    return StageWrapper(stage.value) if stage.value else None


def load_from_memory(
    data: bytes,
    format: int = Format.AUTO,
    options: Optional[LoadOptions] = None,
    capture_error: bool = True,
) -> Optional[StageWrapper]:
    """Load USD from memory"""
    error_buf = ctypes.create_string_buffer(1024)
    stage = ctypes.c_void_p()

    _lib.tusdz_load_from_memory.restype = ctypes.c_int
    _lib.tusdz_load_from_memory.argtypes = [
        ctypes.c_void_p,
        ctypes.c_size_t,
        ctypes.c_int,
        ctypes.POINTER(LoadOptions),
        ctypes.POINTER(ctypes.c_void_p),
        ctypes.c_char_p,
        ctypes.c_size_t,
    ]

    result = _lib.tusdz_load_from_memory(
        ctypes.c_char_p(data),
        len(data),
        format,
        ctypes.byref(options) if options else None,
        ctypes.byref(stage),
        error_buf,
        len(error_buf),
    )

    if result != Result.SUCCESS:
        error_msg = error_buf.value.decode('utf-8') if error_buf.value else "Unknown error"
        if capture_error:
            raise RuntimeError(f"Failed to load USD from memory: {error_msg}")
        return None

    return StageWrapper(stage.value) if stage.value else None


def detect_format(filepath: str) -> int:
    """Detect USD file format"""
    _lib.tusdz_detect_format.restype = ctypes.c_int
    _lib.tusdz_detect_format.argtypes = [ctypes.c_char_p]
    return _lib.tusdz_detect_format(filepath.encode('utf-8'))


# ============================================================================
# Auto-initialization
# ============================================================================

def _auto_init():
    """Auto-initialize library on import"""
    try:
        init()
    except Exception:
        pass  # Library might already be initialized


# Initialize on import
_auto_init()

# Cleanup on exit
import atexit
atexit.register(shutdown)